# DINOmite

./: .gitattributes  .gitignore  Abstract_PL.md  README.md  extract_accuracies.py  main.py  plot_loss_acc.py  pyproject.toml
models/: .gitignore  checkpoint_epoch_1.pth  checkpoint_epoch_3.pth  cifar10_linear_classifier.pth  cifar_classifier.py  classification_model.py
models/linear_head_classification/: checkpoint_epoch_2.pth
notebooks/: cifar10.ipynb  pgd.ipynb
poster/: Makefile  bibliography.bib  poster.aux  poster.fdb_latexmk  poster.fls  poster.tex
scripts/: classify_image.py  download_papers.py  evaluate_all_attacks.py  evaluate_attack.py  generate_poster_results.py  train_defense.py  train_linear_probe.py
scripts/cifar10/: 01_load_data.py  01_train_linear.py  02_test.py  03_test.py  04_fgsm_attack.py  accuracy_log_trades.txt  cw_attack.py  evaluate_robustness.py  fgsm_attack.py  improve_robustness.py  improve_robustness_trades.py  knn_classification_model.py  linear_head_model.py  linear_head_test.py  linear_head_train.py  pgd_attack.py
scripts/utils/: save_example.py
slurm_scripts/: README.md
slurm_scripts/attack/: evaluate_all_attacks.sbatch  evaluate_autoattack.sbatch  evaluate_bim.sbatch  evaluate_cw.sbatch  evaluate_deepfool.sbatch  evaluate_fgsm.sbatch  evaluate_pgd.sbatch
slurm_scripts/defense/: train_mart_defense.sbatch  train_pgd_defense.sbatch  train_trades_defense.sbatch
slurm_scripts/eval/: evaluate_model.sbatch  generate_poster_results.sbatch
slurm_scripts/train/: train_linear_probe.sbatch
src/: __init__.py  config.py  datasets.py  evaluation.py  experiments.py  models.py
src/attacks/: __init__.py  autoattack.py  bim.py  cw.py  deepfool.py  fgsm.py  pgd.py
src/defenses/: __init__.py  defense_methods.py
